docs: Add .gitignore elements, add commit template - add ignoring data directories - add commit template .txt   - if you want to use it, follow below command   ```git config (optional --global) commit.template   ./.gitCommitTemplate.txt```

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos,visualstudiocode,python
 
 # ignore project's datas
+raw_data/*
+images/*
+videos/*
 *.json
 *.png
 *.mp4
