docs : ADD PyTorch-YOLOv3 in .gitignore - Object detection을 위해 다른 오픈 소스 활용 - 해당 오픈 소스를 소스를 올리지 않도록 .gitignore에 추가

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Created by https://www.toptal.com/developers/gitignore/api/macos,visualstudiocode,python
 # Edit at https://www.toptal.com/developers/gitignore?templates=macos,visualstudiocode,python
 
+# ignore YOLO v3
+PyTorch-YOLOv3/*
+
 # ignore project's datas
 raw_data/*
 images/*
